# RAII_File_Work_Library

./: .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
include/: FileRAII.hpp
src/: FileRAII.cpp
